--- a/Views/Shared/_AdminLayout.cshtml
+++ b/Views/Shared/_AdminLayout.cshtml
@@ -4,8 +4,29 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
+    <link href="~/Content/Styles/_AdminMonitoring_Layout.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+   
 </head>
 <body>
+    <nav>
+        <ul>
+            <li>
+                <a href="@Url.Action("Dashboard", "AdminMonitoring")" class="logo-container">
+                    <img src="~/Image/Group1-Assets/received_594167488046920.png" />
+                    <span class="nav-item">Down Town Alley Sales Monitoring</span>
+                </a>
+
+            </li>
+            <li>
+                <a href="@Url.Action("Revenue", "AdminMonitoring")" class="menu-container">
+                    <img src="~/Image/Group1-Assets/revenue-icon.png" />
+                    <span class="nav-item">Revenue</span>
+                </a>
+            </li>
+        </ul>
+
+    </nav>
     <div>
         @RenderBody()
     </div>
