--- a/Views/AdminMonitoring/Losses.cshtml
+++ b/Views/AdminMonitoring/Losses.cshtml
@@ -1,8 +1,8 @@
 ﻿
 @{
-    ViewBag.Title = "Revenue";
+    ViewBag.Title = "Losses";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
-<h2>Revenue</h2>
+<h2>Losses</h2>
 
