Added some functions

--- a/Views/AdminMonitoring/SalesRevenue.cshtml
+++ b/Views/AdminMonitoring/SalesRevenue.cshtml
@@ -3,6 +3,26 @@
     ViewBag.Title = "SalesRevenue";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
+<link href="~/Content/Styles/Group1Stylesheets/SalesRevenueStyle.css" rel="stylesheet" />
 
 <h2>SalesRevenue</h2>
 
+<div class="Sales-total-top-container">
+    <div class="Sales-total-container">
+        <h2 >Total Sales</h2>
+        <h1>4,000,000.00</h1>
+    </div>
+    <div class="Sales-total-container">
+        <h2>Total Sales Per Day</h2>
+        <h1>4,000,000.00</h1>
+    </div>
+    <div class="Sales-total-container">
+        <h2>Daily average Sales</h2>
+        <h1>4,000,000.00</h1>
+    </div>
+    <div class="Sales-total-container">
+        <h2>Total Order</h2>
+        <h1>3,0000</h1>
+    </div>
+
+</div>
