--- a/Views/AdminMonitoring/Dashboard.cshtml
+++ b/Views/AdminMonitoring/Dashboard.cshtml
@@ -3,6 +3,56 @@
     ViewBag.Title = "Dashboard";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
+<link href="~/Content/Styles/Group1Stylesheets/Dashboard.css" rel="stylesheet" />
 
-<h2>Admin Monitoring</h2>
+<div>
+    <div class="dashboard-top-container">
+        <div class="dashboard-total-container" id="dashboard-total-container-CriticalItems">
+            <div class="total-logo">
+                <img src="~/Image/Group1-Assets/CriticalLevelIcon.png" />
+            </div>
+            <div class="total-information-container">
+                <h2>10000</h2>
+                <h4>Critical Items</h4>
+                <h5>Total Critical items recorded in the Inventory</h5>
+            </div>
+        </div>
+        <div class="dashboard-total-container" id="dashboard-total-container-CriticalItems">
+            <div class="total-logo">
+                <img src="~/Image/Group1-Assets/TotalProductsIcon.png" />
+            </div>
+            <div class="total-information-container">
+                <h2>30</h2>
+                <h4>Total Products</h4>
+                <h5>Total product recorded in the inventory. </h5>
+            </div>
+        </div>
+        <div class="dashboard-total-container" id="dashboard-total-container-CriticalItems">
+            <div class="total-logo">
+                <img src="~/Image/Group1-Assets/DailySales.png" />
+            </div>
+            <div class="total-information-container">
+                <h2>1,759.00</h2>
+                <h4>Daily Sales</h4>
+                <h5>Total daily sales recorded in the inventory.</h5>
+            </div>
+        </div>
+        <div class="dashboard-total-container" id="dashboard-total-container-CriticalItems">
+            <div class="total-logo">
+               <img src="~/Image/Group1-Assets/Stocks on hand.png" />
+            </div>
+            <div class="total-information-container">
+                <h2>1,087</h2>
+                <h4>Stocks</h4>
+                <h5>Total product stock on hand.</h5>
+            </div>
+        </div>
+    </div>
+
+    <div class="graph-container">
+        <h1>Product Revenue Graph Goes Here</h1>
+    </div>
+</div>
+
+
 
