--- a/Views/AdminMonitoring/SalesRevenue.cshtml
+++ b/Views/AdminMonitoring/SalesRevenue.cshtml
@@ -9,7 +9,7 @@
 
 <div class="Sales-total-top-container">
     <div class="Sales-total-container">
-        <h2 >Total Sales</h2>
+        <h2>Total Sales</h2>
         <h1>4,000,000.00</h1>
     </div>
     <div class="Sales-total-container">
@@ -26,3 +26,5 @@
     </div>
 
 </div>
+
+<p>Total Employees:@ViewBag.TotalCountEmployee</p>
