--- a/Views/AdminMonitoring/SalesRevenue.cshtml
+++ b/Views/AdminMonitoring/SalesRevenue.cshtml
@@ -5,7 +5,7 @@
 }
 <link href="~/Content/Styles/Group1Stylesheets/SalesRevenueStyle.css" rel="stylesheet" />
 
-<h2>SalesRevenue</h2>
+<h2>Sales Revenue</h2>
 
 <div class="Sales-total-top-container">
     <div class="Sales-total-container">
@@ -24,7 +24,6 @@
         <h2>Total Order</h2>
         <h1>3,0000</h1>
     </div>
-
 </div>
 
-<p>Total Employees:@ViewBag.TotalCountEmployee</p>
+@*<p>Total Employees:@ViewBag.TotalCountEmployee</p>*@
