--- a/Content/Styles/Group1Stylesheets/SalesRevenueStyle.css
+++ b/Content/Styles/Group1Stylesheets/SalesRevenueStyle.css
@@ -1,29 +1,37 @@
-﻿body {
+﻿* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box
+}
+
+body {
     border: 3px solid black;
     height: 100vh;
     margin-left: 90px;
 }
 
 h2{
-    margin: 20px 0 0px 20px;
+    margin: 20px 0 0 50px;
 }
 
-.Sales-total-top-container{
-    margin: 30px 0 0 0;
-    width:100%;
-    height: 200px;
-    display:flex;
-    justify-content:space-evenly;
-    align-items:center;
-    border:2px solid green;
+.Sales-total-top-container {
+    width: 100%;
+    height: 220px;
+    /*background:red;*/
+    padding:20px;
+    display: flex;
+    justify-content: space-evenly;
+    column-gap: 10px;
 }
 
-.Sales-total-container{
-    width:300px;
-    height:150px;
-    border:2px solid black;
-    text-align:center;
+.Sales-total-container {
+    width: 300px;
+    height: 150px;
+    background: rgba(84, 22, 35, 1);
+    border: 2px solid black;
+    text-align: center;
     padding: 20px;
+    color: #fcf5f4;
 }
 .Sales-total-container h2{
     margin: 0 0 25px 0;
@@ -31,4 +39,19 @@ h2{
 
 .Sales-total-container h1{
     
+}
+
+@media (max-width: 800px) {
+    .Sales-total-top-container {
+        flex-direction: column;
+        row-gap: 10px;
+        padding: 0px;
+        align-items: center;
+        height: 100vh;
+    }
+
+    .sales-total-container {
+        width: 350px;
+        height: 180px;
+    }
 }
