--- a/Content/Styles/Group1Stylesheets/Dashboard.css
+++ b/Content/Styles/Group1Stylesheets/Dashboard.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    border: 3px solid black;
+/*    border: 3px solid black;*/
     height: 100vh;
     margin-left: 90px;
 }
@@ -17,6 +17,7 @@ h2{
 .dashboard-total-top-container {
     width: 100%;
     height: 220px;
+    /* background:red;*/
     padding: 20px;
     display: flex;
     justify-content: space-evenly;
@@ -33,8 +34,9 @@ h2{
     column-gap:10px;
 }
 
-@media(max-width:800px){
-    .dashboard-total-top-container {
+@media (max-width: 800px) {
+    .dashboard-total-top-container{
+        margin: 30px 0 0 0;
         flex-direction: column;
         row-gap: 10px;
         padding: 0px;
