--- a/Content/Styles/Group1Stylesheets/SalesRevenueStyle.css
+++ b/Content/Styles/Group1Stylesheets/SalesRevenueStyle.css
@@ -3,22 +3,19 @@
     padding: 0;
     box-sizing: border-box
 }
-
 body {
-    border: 3px solid black;
     height: 100vh;
     margin-left: 90px;
+    background: #fdf3f3;
 }
-
 h2{
     margin: 20px 0 0 50px;
 }
-
 .Sales-total-top-container {
     width: 100%;
     height: 220px;
-    /*background:red;*/
-    padding:20px;
+    /* background:red;*/
+    padding: 20px;
     display: flex;
     justify-content: space-evenly;
     column-gap: 10px;
@@ -30,19 +27,14 @@ h2{
     background: rgba(84, 22, 35, 1);
     border: 2px solid black;
     text-align: center;
-    padding: 20px;
+    padding: 10px;
     color: #fcf5f4;
 }
-.Sales-total-container h2{
-    margin: 0 0 25px 0;
-}
 
-.Sales-total-container h1{
-    
-}
 
 @media (max-width: 800px) {
     .Sales-total-top-container {
+        margin: 30px 0 0 0;
         flex-direction: column;
         row-gap: 10px;
         padding: 0px;
@@ -50,8 +42,19 @@ h2{
         height: 100vh;
     }
 
-    .sales-total-container {
-        width: 350px;
+    .Sales-total-container {
+        width: 300px;
         height: 180px;
     }
+
+    h2 {
+        margin: 20px 20px 20px 50px;
+    }
+}
+.Sales-total-container h3{
+    padding:20px;
+}
+
+.Sales-total-container h1{
+    
 }
