--- a/Views/AdminMonitoring/SalesRevenue.cshtml
+++ b/Views/AdminMonitoring/SalesRevenue.cshtml
@@ -5,25 +5,23 @@
 }
 <link href="~/Content/Styles/Group1Stylesheets/SalesRevenueStyle.css" rel="stylesheet" />
 
-<h2>Sales Revenue</h2>
+<h2 class="header-title">Sales Revenue</h2>
 
 <div class="Sales-total-top-container">
     <div class="Sales-total-container">
-        <h2>Total Sales</h2>
+        <h3>Total Sales</h3>
         <h1>4,000,000.00</h1>
     </div>
     <div class="Sales-total-container">
-        <h2>Total Sales Per Day</h2>
+        <h3>Total Sales Per Day</h3>
         <h1>4,000,000.00</h1>
     </div>
     <div class="Sales-total-container">
-        <h2>Daily average Sales</h2>
+        <h3>Daily average Sales</h3>
         <h1>4,000,000.00</h1>
     </div>
     <div class="Sales-total-container">
-        <h2>Total Order</h2>
+        <h3>Total Order</h3>
         <h1>3,0000</h1>
     </div>
 </div>
-
-@*<p>Total Employees:@ViewBag.TotalCountEmployee</p>*@
