--- a/Views/EmployeeManagement/Delete.cshtml
+++ b/Views/EmployeeManagement/Delete.cshtml
@@ -9,97 +9,436 @@
 <html>
 <head>
 
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            outline: none;
+            border: none;
+            text-decoration: none;
+            box-sizing: border-box;
+            font-family: Arial;
+        }
+
+        body {
+            background: rgba(75,6,15,255);
+            background-attachment: fixed;
+            overflow: hidden;
+        }
+
+        .titlehder {
+            font-family: 'Times New Roman';
+            position: absolute;
+            left: 15%;
+            top: 5%;
+            font-size: 38px;
+            color: white;
+        }
+
+
+        .logo-img {
+            position: relative;
+            display: block;
+            width: 70%;
+            border-radius: 55%;
+            border: 0.5px solid #808080;
+            top: -10px;
+            margin-left: 40px;
+            margin-right: auto;
+            z-index: 2;
+        }
+
+        nav {
+            margin-left: 20px;
+            margin-top: -20px;
+            width: 240px;
+            height: 740px;
+            overflow-x: hidden;
+            overflow-y: scroll;
+        }
+
+            nav::-webkit-scrollbar {
+                display: none;
+            }
+
+        .navitem {
+            position: relative;
+            display: block;
+            background-color: ghostwhite;
+            padding: 5px;
+            margin-top: 13%;
+            margin-right: auto;
+            margin-left: auto;
+            width: 100px;
+            height: 100px;
+            border-radius: 55%;
+            border: 1px solid rgba(0,0,0,1);
+        }
+
+        .cogicon {
+            position: absolute;
+            background-color: white;
+            border: 5px solid rgba(0,0,0,1);
+            border-radius: 55%;
+            right: 50px;
+            top: 50px;
+            width: 120px;
+            height: auto;
+        }
+
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 1;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+            background-color: rgb(0,0,0);
+            background-color: rgba(0,0,0,0.4);
+        }
+
+        .modal-content {
+            background-color: #fefefe;
+            margin: 15% auto;
+            padding: 20px;
+            border: 1px solid #888;
+            width: 40%;
+        }
+
+        .close {
+            color: #aaaaaa;
+            float: right;
+            font-size: 28px;
+            font-weight: bold;
+        }
+
+            .close:hover,
+            .close:focus {
+                color: #000;
+                text-decoration: none;
+                cursor: pointer;
+            }
+
+        .exitt {
+            position: absolute;
+            padding: 0;
+            margin: auto;
+            margin-left: 80%;
+            margin-bottom: -60px;
+            width: 50px;
+            height: 50px;
+        }
+
+        .btnn {
+            text-align: center;
+            background-color: dodgerblue;
+            width: 70px;
+            height: 50px;
+        }
+
+        .dvlogout {
+            position: absolute;
+            text-align: center;
+            background-color: deepskyblue;
+        }
+
+        .curvenav {
+            position: absolute;
+            background-color: ghostwhite;
+            border-radius: 140px, 0, 0, 40px;
+            transition: 0.5s ease-in-out;
+            width: 300px;
+            height: 160px;
+            border: 1px, solid, rgba(0,0,0,1);
+            top: 285px;
+            margin-left: 88px;
+            border-radius: 80px 0 0 80px;
+            border: 3px solid rgba(100,21,4,255);
+            z-index: -2;
+        }
+
+        .btnn:hover {
+            background-color: blue;
+        }
+
+        .container {
+            position: absolute;
+            background-color: lightgrey;
+            top: 190px;
+            margin: 0 auto;
+            margin-left: 14%;
+            padding: 20px;
+            border: 1px solid #ccc;
+            border-radius: 40px 40px 40px 40px;
+            height: 75%;
+            width: 86%;
+            overflow-x: hidden;
+            overflow-y: scroll;
+        }
+
+            .container::-webkit-scrollbar {
+                display: none;
+            }
+
+        .logobg {
+            opacity: 0.15;
+            position: absolute;
+            margin: 0;
+            padding: 0;
+            top: -170px;
+            left: -70px;
+            width: 2720px;
+            z-index: -1;
+        }
+
+        .ContainerHeader {
+            background-color: white;
+            width: 100%;
+            height: 38px;
+            top: 30px;
+        }
+
+        .lgout-btn {
+            display: inline-block;
+            padding: 10px 20px;
+            margin: 5px;
+            margin-left: 40%;
+            margin-right: 40%;
+            font-size: 18px;
+            color: #ffffff;
+            background-color: #007bff;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            text-decoration: none;
+            transition: background-color 0.3s;
+        }
+
+            .lgout-btn:hover {
+                background-color: #0056b3;
+            }
+
+        h2.crud-header {
+            color: black;
+            font-size: 42px;
+            margin-bottom: 0;
+            text-align: left;
+            background-color: white;
+            height: 42px;
+        }
+
+        table.crud-table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-bottom: 20px;
+        }
+
+        th.crud-header-cell, td.crud-data-cell {
+            padding: 3px;
+            border: 2px solid rgba(0,0,0,0.7);
+            text-align: left;
+            font-size: 18px;
+        }
+
+        th.crud-header-cell {
+            background-color: #f2f2f2;
+            font-size: 24px;
+        }
+
+        tr.crud-row:nth-child(even) {
+            background-color: #f9f9f9;
+        }
+
+        /*tr.crud-row:hover {
+            background-color: #e5e5e5;
+        }*/
+        .crud-row {
+            background-color: white;
+        }
+
+        .custom-btn {
+            display: inline-block;
+            padding: 7px 13px;
+            margin: 5px;
+            font-size: 42px;
+            color: blue;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            text-decoration: none;
+            transition: background-color 0.3s;
+        }
+
+            .custom-btn:hover {
+                color: white;
+                background-color: dodgerblue;
+            }
+    </style>
     <meta name="viewport" content="width=device-width" />
-    <title>Delete</title>
+    <title>Details</title>
 </head>
 <body>
-    <h3>Are you sure you want to delete this?</h3>
-    <div>
-        <h4>EmployeeInformation</h4>
-        <hr />
-        <dl class="dl-horizontal">
-            <dt>
-                @Html.DisplayNameFor(model => model.First_Name)
-            </dt>
-    
-            <dd>
-                @Html.DisplayFor(model => model.First_Name)
-            </dd>
-    
-            <dt>
-                @Html.DisplayNameFor(model => model.Middle_Name)
-            </dt>
-    
-            <dd>
-                @Html.DisplayFor(model => model.Middle_Name)
-            </dd>
-    
-            <dt>
-                @Html.DisplayNameFor(model => model.Last_Name)
-            </dt>
-    
-            <dd>
-                @Html.DisplayFor(model => model.Last_Name)
-            </dd>
-    
-            <dt>
-                @Html.DisplayNameFor(model => model.Sex)
-            </dt>
-    
-            <dd>
-                @Html.DisplayFor(model => model.Sex)
-            </dd>
-    
-            <dt>
-                @Html.DisplayNameFor(model => model.Address)
-            </dt>
-    
-            <dd>
-                @Html.DisplayFor(model => model.Address)
-            </dd>
-    
-            <dt>
-                @Html.DisplayNameFor(model => model.Phone_Number)
-            </dt>
-    
-            <dd>
-                @Html.DisplayFor(model => model.Phone_Number)
-            </dd>
-    
-            <dt>
-                @Html.DisplayNameFor(model => model.Email)
-            </dt>
-    
-            <dd>
-                @Html.DisplayFor(model => model.Email)
-            </dd>
-    
-            <dt>
-                @Html.DisplayNameFor(model => model.Birth_Date)
-            </dt>
-    
-            <dd>
-                @Html.DisplayFor(model => model.Birth_Date)
-            </dd>
-    
-            <dt>
-                @Html.DisplayNameFor(model => model.Date_Hired)
-            </dt>
-    
-            <dd>
-                @Html.DisplayFor(model => model.Date_Hired)
-            </dd>
-    
-        </dl>
-    
-        @using (Html.BeginForm()) {
-            @Html.AntiForgeryToken()
-    
-            <div class="form-actions no-color">
-                <input type="submit" value="Delete" class="btn btn-default" /> |
-                @Html.ActionLink("Back to List", "Index")
+
+    <h1 class="titlehder">DOWNTOWN ALLEY<br />EMPLOYEE RECORD SYSTEM</h1>
+
+
+    <!-- MODAL FOR LOGOUT COG-ICON -->
+
+    <div class="cogcenter">
+        <button id="openModal">
+            <img src="~/Image/Group4/ICONS/LogoutCog.png" class="cogicon" />
+        </button>
+
+        <div id="myModal" class="modal">
+
+            <div class="modal-content">
+                <span class="close">&times;</span>
+
+                <h1>DO YOU WANT TO LOGOUT?</h1>
+
+                <!--href="Url.Action("Login", "Accounts")"-->
+                <a class="lgout-btn">LOGOUT</a>
+
+
+
+
             </div>
-        }
+
+        </div>
+
     </div>
+
+
+
+    <!-- vvv NAVBAR SECTION vvv -->
+    <nav>
+        <br>
+        <br>
+        <img src="~/Image/Group4/LogoDTA.png" class="logo-img" />
+
+        <!-- Employee List -->
+        <a href="@Url.Action("Hr_Employee_L","EmployeeManagement")">
+            <img src="~/Image/Group4/ICONS/EmployeeList.png" class="navitem" />
+        </a>
+        <hr>
+
+        <!-- Attendance List -->
+        <a href="@Url.Action("Hr_Attendance_L","EmployeeManagement")">
+            <img src="~/Image/Group4/ICONS/EmployeeAttendance.png" class="navitem" />
+        </a>
+        <hr>
+
+        <!-- Leave Request -->
+        <a href="@Url.Action("Hr_RequestLeave","EmployeeManagement")">
+            <img src="~/Image/Group4/ICONS/LeaveRequest.png" class="navitem" />
+        </a>
+
+        <!-- Payroll - DIRECTLY TO ANOTHER SYSTEM -->
+        <!--<a href="Url.Action("Payroll","Payroll")">-->
+        <img src="~/Image/Group4/ICONS/Payroll.png" class="navitem" />
+        </a>
+        <hr>
+
+    </nav>
+
+    <div class="container">
+        <div class="Text-header">
+            <div class="ContainerHeader">
+                <h2 style="font-family:'Times New Roman'; font-size:38px; text-align:center;">| EMPLOYEE INFORMATION |</h2>
+                </div>
+                <br>
+                <h3>Are you sure you want to delete this?</h3>
+                <br>
+                <div>
+
+                    <hr />
+                    <table class="crud-table" style="width:100%;">
+                        <tr>
+                            <th class="crud-header-cell" style="width:5%;">
+                                First Name
+                            </th>
+
+                            <td class="crud-data-cell" style="width:95%;">
+                                @Html.DisplayFor(model => model.First_Name)
+                            </td>
+                        </tr>
+                        <tr>
+                            <th class="crud-header-cell" style="width:5%;">
+                                Middle Name
+                            </th>
+                            <td class="crud-data-cell" style="width:95%;">
+                                @Html.DisplayFor(model => model.Middle_Name)
+                            </td>
+                        </tr>
+                        <tr>
+                            <th class="crud-header-cell" style="width:5%;">
+                                Last Name
+                            </th>
+                            <td class="crud-data-cell" style="width:95%;">
+                                @Html.DisplayFor(model => model.Last_Name)
+                            </td>
+                        </tr>
+                        <tr>
+                            <th class="crud-header-cell" style="width:5%;">
+                                Sex
+                            </th>
+                            <td class="crud-data-cell" style="width:5%;">
+                                @Html.DisplayFor(model => model.Sex)
+                            </td>
+                        </tr>
+                        <tr>
+                            <th class="crud-header-cell" style="width:17%;">
+                                Address
+                            </th>
+                            <td class="crud-data-cell" style="width:17%;">
+                                @Html.DisplayFor(model => model.Address)
+                            </td>
+                        </tr>
+                        <tr>
+                            <th class="crud-header-cell" style="width:15%;">
+                                Phone Number
+                            </th>
+                            <td class="crud-data-cell" style="width:15%;">
+                                @Html.DisplayFor(model => model.Phone_Number)
+                            </td>
+                        </tr>
+                        <tr>
+                            <th class="crud-header-cell" style="width:15%;">
+                                Email
+                            </th>
+                            <td class="crud-data-cell" style="width:15%;">
+                                @Html.DisplayFor(model => model.Email)
+                            </td>
+                        </tr>
+                        <tr>
+                            <th class="crud-header-cell" style="width:5%;">
+                                Birth Date
+                            </th>
+                            <td class="crud-data-cell" style="width:5%;">
+                                @Html.DisplayFor(model => model.Birth_Date)
+                            </td>
+                        </tr>
+                        <tr>
+                            <th class="crud-header-cell" style="width:5%;">
+                                Date Hired
+                            </th>
+                            <td class="crud-data-cell" style="width:5%;">
+                                @Html.DisplayFor(model => model.Date_Hired)
+                            </td>
+                        </tr>
+                    </table>
+
+                    @using (Html.BeginForm())
+                    {
+                        @Html.AntiForgeryToken()
+
+                        <div class="form-actions no-color">
+                            <input type="submit" value="Delete" class="custom-btn btn-default" /> |
+                            <div class="custom-btn">@Html.ActionLink("Back to List", "Hr_Employee_L")</div>
+                        </div>
+                    }
+                </div>
 </body>
 </html>
