--- a/Views/EmployeeManagement/Hr_Attendance_L.cshtml
+++ b/Views/EmployeeManagement/Hr_Attendance_L.cshtml
@@ -11,269 +11,272 @@
 <html>
 <head>
     <style>
-        * {
-            margin: 0;
-            padding: 0;
-            outline: none;
-            border: none;
-            text-decoration: none;
-            box-sizing: border-box;
-            font-family: Arial;
-        }
-
-        body {
-            background: rgba(75,6,15,255);
-            background-attachment: fixed;
-            overflow: hidden;
-        }
-
-        .titlehder {
-            font-family: 'Times New Roman';
-            position: absolute;
-            left: 15%;
-            top: 5%;
-            font-size: 52px;
-            color: white;
-        }
-
-
-        .logo-img {
-            position: relative;
-            display: block;
-            width: 60%;
-            border-radius: 55%;
-            border: 0.5px solid #808080;
-            top: 10px;
-            margin-left: 60px;
-            margin-right: auto;
-            z-index: 2;
-        }
-
-        nav {
-            margin-left: -50px;
-            width: 430px;
-            height: auto;
-            overflow-x: hidden;
-            overflow-y: scroll;
-        }
-
-            nav::-webkit-scrollbar {
-                display: none;
-            }
-
-        .navitem {
-            position: relative;
-            display: block;
-            background-color: ghostwhite;
-            padding: 5px;
-            margin-top: 10%;
-            margin-right: auto;
-            margin-left: auto;
-            width: 130px;
-            height: 130px;
-            border-radius: 55%;
-            border: 1px solid rgba(0,0,0,1);
-        }
-
-        .cogicon {
-            position: absolute;
-            background-color: white;
-            border: 5px solid rgba(0,0,0,1);
-            border-radius: 55%;
-            right: 50px;
-            top: 50px;
-            width: 180px;
-            height: auto;
-        }
-
-        .modal {
-            display: none;
-            position: fixed;
-            z-index: 1;
-            left: 0;
-            top: 0;
-            width: 100%;
-            height: 100%;
-            overflow: auto;
-            background-color: rgb(0,0,0);
-            background-color: rgba(0,0,0,0.4);
-        }
-
-        .modal-content {
-            background-color: #fefefe;
-            margin: 15% auto;
-            padding: 20px;
-            border: 1px solid #888;
-            width: 40%;
-        }
-
-        .close {
-            color: #aaaaaa;
-            float: right;
-            font-size: 28px;
-            font-weight: bold;
-        }
-
-            .close:hover,
-            .close:focus {
-                color: #000;
+            * {
+                margin: 0;
+                padding: 0;
+                outline: none;
+                border: none;
                 text-decoration: none;
-                cursor: pointer;
+                box-sizing: border-box;
+                font-family: Arial;
             }
 
-        .exitt {
-            position: absolute;
-            padding: 0;
-            margin: auto;
-            margin-left: 80%;
-            margin-bottom: -60px;
-            width: 50px;
-            height: 50px;
-        }
+            body {
+                background: rgba(75,6,15,255);
+                background-attachment: fixed;
+                overflow: hidden;
+            }
 
-        .btnn {
-            text-align: center;
-            background-color: dodgerblue;
-            width: 70px;
-            height: 50px;
-        }
+            .titlehder {
+                font-family: 'Times New Roman';
+                position: absolute;
+                left: 15%;
+                top: 5%;
+                font-size: 38px;
+                color: white;
+            }
 
-        .dvlogout {
-            position: absolute;
-            text-align: center;
-            background-color: deepskyblue;
-        }
 
-        .curvenav {
-            position: absolute;
-            background-color: ghostwhite;
-            border-radius: 140px, 0, 0, 40px;
-            transition: 0.5s ease-in-out;
-            width: 300px;
-            height: 160px;
-            border: 1px, solid, rgba(0,0,0,1);
-            top: 460px;
-            margin-left: 88px;
-            border-radius: 80px 0 0 80px;
-            border: 3px solid rgba(100,21,4,255);
-            z-index: -2;
-        }
+            .logo-img {
+                position: relative;
+                display: block;
+                width: 70%;
+                border-radius: 55%;
+                border: 0.5px solid #808080;
+                top: -10px;
+                margin-left: 40px;
+                margin-right: auto;
+                z-index: 2;
+            }
 
-        .btnn:hover {
-            background-color: blue;
-        }
+            nav {
+                margin-left: 20px;
+                margin-top: -20px;
+                width: 240px;
+                height: 740px;
+                overflow-x: hidden;
+                overflow-y: scroll;
+            }
 
-        .container {
-            position: absolute;
-            background-color: lightgrey;
-            top: 240px;
-            margin: 0 auto;
-            margin-left: 13%;
-            padding: 20px;
-            border: 1px solid #ccc;
-            border-radius: 40px 40px 40px 40px;
-            height: 78%;
-            width: 87%;
-            overflow: hidden;
-        }
+                nav::-webkit-scrollbar {
+                    display: none;
+                }
 
-            .container::-webkit-scrollbar {
+            .navitem {
+                position: relative;
+                display: block;
+                background-color: ghostwhite;
+                padding: 5px;
+                margin-top: 13%;
+                margin-right: auto;
+                margin-left: auto;
+                width: 100px;
+                height: 100px;
+                border-radius: 55%;
+                border: 1px solid rgba(0,0,0,1);
+            }
+
+            .cogicon {
+                position: absolute;
+                background-color: white;
+                border: 5px solid rgba(0,0,0,1);
+                border-radius: 55%;
+                right: 50px;
+                top: 50px;
+                width: 120px;
+                height: auto;
+            }
+
+            .modal {
                 display: none;
+                position: fixed;
+                z-index: 1;
+                left: 0;
+                top: 0;
+                width: 100%;
+                height: 100%;
+                overflow: auto;
+                background-color: rgb(0,0,0);
+                background-color: rgba(0,0,0,0.4);
             }
 
-        .logobg {
-            opacity: 0.15;
-            position: absolute;
-            margin: 0;
-            padding: 0;
-            top: -170px;
-            left: -70px;
-            width: 2720px;
-            z-index: -1;
-        }
-
-        .ContainerHeader {
-            background-color: white;
-            width: 100%;
-            height: 52px;
-            top: 30px;
-        }
-
-        .lgout-btn {
-            display: inline-block;
-            padding: 10px 20px;
-            margin: 5px;
-            margin-left: 40%;
-            margin-right: 40%;
-            font-size: 18px;
-            color: #ffffff;
-            background-color: #007bff;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-            text-decoration: none;
-            transition: background-color 0.3s;
-        }
-
-            .lgout-btn:hover {
-                background-color: #0056b3;
+            .modal-content {
+                background-color: #fefefe;
+                margin: 15% auto;
+                padding: 20px;
+                border: 1px solid #888;
+                width: 40%;
             }
 
-        h2.crud-header {
-            color: black;
-            font-size: 42px;
-            margin-bottom: 0;
-            text-align: left;
-            background-color: white;
-            height: 42px;
-        }
+            .close {
+                color: #aaaaaa;
+                float: right;
+                font-size: 28px;
+                font-weight: bold;
+            }
 
-        table.crud-table {
-            width: 100%;
-            border-collapse: collapse;
-            margin-bottom: 20px;
-        }
+                .close:hover,
+                .close:focus {
+                    color: #000;
+                    text-decoration: none;
+                    cursor: pointer;
+                }
 
-        th.crud-header-cell, td.crud-data-cell {
-            padding: 12px;
-            border: 2px solid rgba(0,0,0,0.7);
-            text-align: left;
-            font-size: 28px;
-        }
+            .exitt {
+                position: absolute;
+                padding: 0;
+                margin: auto;
+                margin-left: 80%;
+                margin-bottom: -60px;
+                width: 50px;
+                height: 50px;
+            }
 
-        th.crud-header-cell {
-            background-color: #f2f2f2;
-            font-size: 32px;
-        }
+            .btnn {
+                text-align: center;
+                background-color: dodgerblue;
+                width: 70px;
+                height: 50px;
+            }
 
-        tr.crud-row:nth-child(even) {
-            background-color: #f9f9f9;
-        }
+            .dvlogout {
+                position: absolute;
+                text-align: center;
+                background-color: deepskyblue;
+            }
 
-        /*tr.crud-row:hover {
+            .curvenav {
+                position: absolute;
+                background-color: ghostwhite;
+                border-radius: 140px, 0, 0, 40px;
+                transition: 0.5s ease-in-out;
+                width: 240px;
+                height: 120px;
+                border: 1px, solid, rgba(0,0,0,1);
+                top: 345px;
+                margin-left: 78px;
+                border-radius: 80px 0 0 80px;
+                border: 3px solid rgba(100,21,4,255);
+                z-index: -2;
+            }
+
+            .btnn:hover {
+                background-color: blue;
+            }
+
+            .container {
+                position: absolute;
+                background-color: lightgrey;
+                top: 190px;
+                margin: 0 auto;
+                margin-left: 14%;
+                padding: 20px;
+                border: 1px solid #ccc;
+                border-radius: 40px 40px 40px 40px;
+                height: 75%;
+                width: 86%;
+                overflow-x: hidden;
+                overflow-y: scroll;
+            }
+
+                .container::-webkit-scrollbar {
+                    display: none;
+                }
+
+            .logobg {
+                opacity: 0.15;
+                position: absolute;
+                margin: 0;
+                padding: 0;
+                top: -170px;
+                left: -70px;
+                width: 2720px;
+                z-index: -1;
+            }
+
+            .ContainerHeader {
+                background-color: white;
+                width: 100%;
+                height: 38px;
+                top: 30px;
+            }
+
+            .lgout-btn {
+                display: inline-block;
+                padding: 10px 20px;
+                margin: 5px;
+                margin-left: 40%;
+                margin-right: 40%;
+                font-size: 18px;
+                color: #ffffff;
+                background-color: #007bff;
+                border: none;
+                border-radius: 4px;
+                cursor: pointer;
+                text-decoration: none;
+                transition: background-color 0.3s;
+            }
+
+                .lgout-btn:hover {
+                    background-color: #0056b3;
+                }
+
+            h2.crud-header {
+                color: black;
+                font-size: 42px;
+                margin-bottom: 0;
+                text-align: left;
+                background-color: white;
+                height: 42px;
+            }
+
+            table.crud-table {
+                width: 100%;
+                border-collapse: collapse;
+                margin-bottom: 20px;
+            }
+
+            th.crud-header-cell, td.crud-data-cell {
+                padding: 3px;
+                border: 2px solid rgba(0,0,0,0.7);
+                text-align: left;
+                font-size: 18px;
+            }
+
+            th.crud-header-cell {
+                background-color: #f2f2f2;
+                font-size: 24px;
+            }
+
+            tr.crud-row:nth-child(even) {
+                background-color: #f9f9f9;
+            }
+
+            /*tr.crud-row:hover {
             background-color: #e5e5e5;
         }*/
-        .crud-row {
-            background-color: white;
-        }
-
-        .custom-btn {
-            display: inline-block;
-            padding: 7px 13px;
-            margin: 5px;
-            font-size: 24px;
-            color: white;
-            background-color: #007bff;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-            text-decoration: none;
-            transition: background-color 0.3s;
-        }
-
-            .custom-btn:hover {
-                background-color: #0056b3;
+            .crud-row {
+                background-color: white;
             }
+
+            .custom-btn {
+                display: inline-block;
+                padding: 4px 9px;
+                margin: 5px;
+                font-size: 18px;
+                color: white;
+                background-color: white;
+                border: none;
+                border-radius: 4px;
+                cursor: pointer;
+                text-decoration: none;
+                transition: background-color 0.3s;
+            }
+
+                .custom-btn:hover {
+                    background-color: dodgerblue;
+                    color: white;
+                }
     </style>
     <meta name="viewport" content="width=device-width" />
     <title>ATTENDANCE LIST</title>
@@ -299,8 +302,8 @@
 
                 <h1>DO YOU WANT TO LOGOUT?</h1>
 
-                <!--href="Url.Action("Login", "Accounts")"-->
-                <a class="lgout-btn">LOGOUT</a>
+                <!---->
+                <a class="lgout-btn" href="@Url.Action("Logout", "Accounts")">LOGOUT</a>
 
 
 
@@ -315,6 +318,9 @@
 
     <!-- vvv NAVBAR SECTION vvv -->
     <nav>
+
+        <br>
+        <br>
 
         <img src="~/Image/Group4/LogoDTA.png" class="logo-img" />
 
@@ -338,7 +344,7 @@
         <!-- Payroll - DIRECTLY TO ANOTHER SYSTEM -->
         <!--<a href="Url.Action("Payroll","Payroll")">-->
             <img src="~/Image/Group4/ICONS/Payroll.png" class="navitem" />
-        </a>
+        
         <hr>
 
     </nav>
@@ -347,7 +353,7 @@
 
     <div class="container">
 
-        <div class="ContainerHeader"><h1 style="font-family: 'Times New Roman'; font-size:52px;">ATTENDANCE LIST</h1></div>
+        <div class="ContainerHeader"><h1 style="font-family: 'Times New Roman'; font-size:38px;">ATTENDANCE LIST</h1></div>
 
         <table class="crud-table" style="width:100%;">
 
