--- a/Views/EmployeeManagement/Hr_Employee_L.cshtml
+++ b/Views/EmployeeManagement/Hr_Employee_L.cshtml
@@ -1,7 +1,4 @@
-﻿
-
-
-@{
+﻿@{
     Layout = null;
 }
 @model IEnumerable<SBIT3J_SuperSystem_Final.Models.EmployeeInformation>
@@ -32,7 +29,7 @@
                     position: absolute;
                     left: 15%;
                     top: 5%;
-                    font-size: 52px;
+                    font-size: 38px;
                     color: white;
                 }
 
@@ -40,19 +37,21 @@
                 .logo-img {
                     position: relative;
                     display: block;
-                    width: 60%;
+                    width: 70%;
                     border-radius: 55%;
                     border: 0.5px solid #808080;
-                    top: 10px;
-                    margin-left: 60px;
+                    top: -10px;
+                    margin-left: 40px;
                     margin-right: auto;
                     z-index: 2;
                 }
 
                 nav {
-                    margin-left: -50px;
-                    width: 430px;
-                    height: auto;
+                    
+                    margin-left: 20px;
+                    margin-top:-20px;
+                    width: 240px;
+                    height: 740px;
                     overflow-x: hidden;
                     overflow-y: scroll;
                 }
@@ -66,11 +65,11 @@
                     display: block;
                     background-color: ghostwhite;
                     padding: 5px;
-                    margin-top: 10%;
+                    margin-top: 13%;
                     margin-right: auto;
                     margin-left: auto;
-                    width: 130px;
-                    height: 130px;
+                    width: 100px;
+                    height: 100px;
                     border-radius: 55%;
                     border: 1px solid rgba(0,0,0,1);
                 }
@@ -82,7 +81,7 @@
                     border-radius: 55%;
                     right: 50px;
                     top: 50px;
-                    width: 180px;
+                    width: 120px;
                     height: auto;
                 }
 
@@ -149,11 +148,11 @@
                     background-color: ghostwhite;
                     border-radius: 140px, 0, 0, 40px;
                     transition: 0.5s ease-in-out;
-                    width: 300px;
-                    height: 160px;
+                    width: 240px;
+                    height: 120px;
                     border: 1px, solid, rgba(0,0,0,1);
-                    top: 285px;
-                    margin-left: 88px;
+                    top: 213px;
+                    margin-left: 78px;
                     border-radius: 80px 0 0 80px;
                     border: 3px solid rgba(100,21,4,255);
                     z-index: -2;
@@ -166,14 +165,14 @@
         .container {
             position: absolute;
             background-color: lightgrey;
-            top: 240px;
+            top: 190px;
             margin: 0 auto;
-            margin-left: 13%;
+            margin-left: 14%;
             padding: 20px;
             border: 1px solid #ccc;
             border-radius: 40px 40px 40px 40px;
-            height: 78%;
-            width: 87%;
+            height: 75%;
+            width: 86%;
             overflow-x: hidden;
             overflow-y: scroll;
              }
@@ -196,7 +195,7 @@
                 .ContainerHeader {
                     background-color: white;
                     width: 100%;
-                    height: 52px;
+                    height: 38px;
                     top: 30px;
                 }
 
@@ -236,15 +235,15 @@
                 }
 
                 th.crud-header-cell, td.crud-data-cell {
-                    padding: 12px;
+                    padding: 3px;
                     border: 2px solid rgba(0,0,0,0.7);
                     text-align: left;
-                    font-size:28px;
+                    font-size:18px;
                 }
 
                 th.crud-header-cell {
                     background-color: #f2f2f2;
-                    font-size: 32px;
+                    font-size: 24px;
                 }
 
                 tr.crud-row:nth-child(even) {
@@ -260,9 +259,9 @@
 
         .custom-btn {
             display: inline-block;
-            padding: 7px 13px;
+            padding: 4px 9px;
             margin: 5px;
-            font-size: 24px;
+            font-size: 18px;
             color: white;
             background-color: white;
             border: none;
@@ -274,7 +273,7 @@
 
             .custom-btn:hover {
                 background-color: dodgerblue;
-                color:white;
+                color: white;
             }
 
 
@@ -319,13 +318,15 @@
 
     <!-- vvv NAVBAR SECTION vvv -->
     <nav>
+        <br>
+        <br>
 
         <img src="~/Image/Group4/LogoDTA.png" class="logo-img" />
 
         <!-- Employee List -->
-        
-            <img src="~/Image/Group4/ICONS/EmployeeList.png" class="navitem" />
-        
+
+        <img src="~/Image/Group4/ICONS/EmployeeList.png" class="navitem" />
+
         <hr>
 
         <!-- Attendance List -->
@@ -341,7 +342,7 @@
 
         <!-- Payroll - DIRECTLY TO ANOTHER SYSTEM -->
         <!--<a href="Url.Action("Payroll","Payroll")">-->
-            <img src="~/Image/Group4/ICONS/Payroll.png" class="navitem" />
+        <img src="~/Image/Group4/ICONS/Payroll.png" class="navitem" />
         </a>
         <hr>
 
@@ -351,7 +352,7 @@
 
     <div class="container">
 
-        <div class="ContainerHeader"><h1 style="font-family: 'Times New Roman'; font-size:52px;">EMPLOYEE LIST</h1></div>
+        <div class="ContainerHeader"><h1 style="font-family: 'Times New Roman'; font-size:38px;">EMPLOYEE LIST</h1></div>
 
         <table class="crud-table" style="width:100%;">
 
@@ -379,7 +380,7 @@
                 </th>
                 <th class="crud-header-cell" style="width:20%;">
 
-                    <a href="@Url.Action("Create", "EmployeeManagement")" class="custom-btn"><h1 style="color:peru;">Create</h1></a>
+                    <a href="@Url.Action("Create", "EmployeeManagement")" class="custom-btn"><h1 style="color: royalblue;">Create</h1></a>
                 </th>
             </tr>
         </table>
