--- a/Views/AdminMonitoring/Profit.cshtml
+++ b/Views/AdminMonitoring/Profit.cshtml
@@ -3,6 +3,25 @@
     ViewBag.Title = "Profit";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
+<link href="~/Content/Styles/Group1Stylesheets/CompanyProfitStyle.css" rel="stylesheet" />
 
-<h2>Profit</h2>
+<h2>Company Profit</h2>
 
+<div class="profit-total-top-container">
+    <div class="profit-total-container">
+        <h3>Total Revenue</h3>
+        <h1>3000.00</h1>
+    </div>
+    <div class="profit-total-container">
+        <h3>Total Profit</h3>
+        <h1>3000.00</h1>
+    </div>
+    <div class="profit-total-container">
+        <h3>Losses and Expenses</h3>
+        <h1>3000.00</h1>
+    </div>
+    <div class="profit-total-container">
+        <h3>Net Profit</h3>
+        <h1>3000.00</h1>
+    </div>
+</div>
