--- a/Content/Styles/Group1Stylesheets/CompanyProfitStyle.css
+++ b/Content/Styles/Group1Stylesheets/CompanyProfitStyle.css
@@ -6,12 +6,13 @@
 body {
     height: 100vh;
     margin-left: 90px;
-    background: #fdf3f3;
 }
-h2{
+h2 {
     margin: 20px 0 0 50px;
 }
-.Sales-total-top-container {
+
+
+.profit-total-top-container {
     width: 100%;
     height: 220px;
     /* background:red;*/
@@ -21,20 +22,20 @@ h2{
     column-gap: 10px;
 }
 
-.Sales-total-container {
+.profit-total-container {
     width: 300px;
     height: 150px;
     background: rgba(84, 22, 35, 1);
     border: 2px solid black;
+    padding: 15px;
     text-align: center;
-    padding: 10px;
+    column-gap: 10px;
     color: #fcf5f4;
     border-radius: 5px;
 }
 
-
 @media (max-width: 800px) {
-    .Sales-total-top-container {
+    .profit-total-top-container{
         margin: 30px 0 0 0;
         flex-direction: column;
         row-gap: 10px;
@@ -43,7 +44,7 @@ h2{
         height: 100vh;
     }
 
-    .Sales-total-container {
+    .profit-total-container{
         width: 300px;
         height: 180px;
     }
@@ -52,10 +53,7 @@ h2{
         margin: 20px 20px 20px 50px;
     }
 }
-.Sales-total-container h3{
-    padding:20px;
-}
 
-.Sales-total-container h1{
-    
+.profit-total-container h3 {
+    padding: 20px;
 }
