--- a/Content/Styles/Group1Stylesheets/LossesStyle.css
+++ b/Content/Styles/Group1Stylesheets/LossesStyle.css
@@ -3,15 +3,17 @@
     padding: 0;
     box-sizing: border-box
 }
+
 body {
     height: 100vh;
     margin-left: 90px;
     background: #fdf3f3;
 }
-h2{
+h2 {
     margin: 20px 0 0 50px;
 }
-.Sales-total-top-container {
+
+.losses-total-top-container {
     width: 100%;
     height: 220px;
     /* background:red;*/
@@ -21,7 +23,7 @@ h2{
     column-gap: 10px;
 }
 
-.Sales-total-container {
+.losses-total-container {
     width: 300px;
     height: 150px;
     background: rgba(84, 22, 35, 1);
@@ -29,21 +31,19 @@ h2{
     text-align: center;
     padding: 10px;
     color: #fcf5f4;
-    border-radius: 5px;
+    border-radius:5px;
 }
 
-
 @media (max-width: 800px) {
-    .Sales-total-top-container {
-        margin: 30px 0 0 0;
+    .losses-total-top-container {
+        margin: 10px 0 0 0;
         flex-direction: column;
-        row-gap: 10px;
         padding: 0px;
         align-items: center;
-        height: 100vh;
+        height: 600px;
     }
 
-    .Sales-total-container {
+    .losses-total-container {
         width: 300px;
         height: 180px;
     }
@@ -52,10 +52,10 @@ h2{
         margin: 20px 20px 20px 50px;
     }
 }
-.Sales-total-container h3{
-    padding:20px;
+
+.losses-total-container h3{
+    padding: 20px;
 }
 
-.Sales-total-container h1{
-    
+.Sales-total-container h1 {
 }
