--- a/Views/AdminMonitoring/Losses.cshtml
+++ b/Views/AdminMonitoring/Losses.cshtml
@@ -3,6 +3,22 @@
     ViewBag.Title = "Losses";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
+<link href="~/Content/Styles/Group1Stylesheets/LossesStyle.css" rel="stylesheet" />
 
 <h2>Losses</h2>
+
+<div class="losses-total-top-container">
+    <div class="losses-total-container">
+        <h3>Total Losses</h3>
+        <h1>3000.00</h1>
+    </div>
+    <div class="losses-total-container">
+        <h3>Damage Average</h3>
+        <h1>3000.00</h1>
+    </div>
+    <div class="losses-total-container">
+        <h3>Fraud</h3>
+        <h1>3000.00</h1>
+    </div>
+</div>
 
