--- a/Views/AdminMonitoring/OverallActivities.cshtml
+++ b/Views/AdminMonitoring/OverallActivities.cshtml
@@ -1,8 +1,51 @@
-﻿
+﻿@model IEnumerable<SBIT3J_SuperSystem_Final.Models.OverallActivitiesModel>
 @{
     ViewBag.Title = "OverallActivities";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
+<link href="~/Content/Styles/Group1Stylesheets/OverallActivitiesStyle.css" rel="stylesheet" />
 
-<h2>OverallActivities</h2>
+<h2>Overall Activities</h2>
+
+<div style="display:grid; place-items:center;">
+    <div class="overall-top-container">
+        <div class="filter-container">
+            <form method="get" action="@Url.Action("OverallActivities")">
+                <label for="roleFilter">Filter by Role:</label>
+                <input type="text" name="searchFilter" id="searchFilter" />
+                <button type="submit">Apply Filter</button>
+            </form>
+        </div>
+    </div>
+</div>
+
+<div class="table-container">
+    <table>
+        <tr>
+            <th>Employee ID</th>
+            <th>First Name</th>
+            <th>Username</th>
+            <th>Role</th>
+            <th>Activity</th>
+            <th>Date&Time</th>
+        </tr>
+        @foreach (var employee in Model)
+        {
+            <tr>
+                <td>@employee.Employee_ID</td>
+                <td>@employee.Name</td>
+                <td>@employee.Username</td>
+                <td>@employee.Role</td>
+                <td>@employee.Activity</td>
+                <td>@employee.Date</td>
+
+            </tr>
+        }
+    </table>
+
+
+</div>
+
+
+
 
