--- a/Views/AdminMonitoring/ProductRevenue.cshtml
+++ b/Views/AdminMonitoring/ProductRevenue.cshtml
@@ -1,8 +1,24 @@
-﻿
+﻿@model List<SBIT3J_SuperSystem_Final.Models.EmployeeExampleInfo>
 @{
     ViewBag.Title = "ProductRevenue";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
-
 <h2>ProductRevenue</h2>
 
+<table>
+    <tr>
+        <th>Employee ID</th>
+        <th>First Name</th>
+        <th>Username</th>
+        <th>Role</th>
+    </tr>
+    @foreach (var employee in Model)
+    {
+        <tr>
+            <td>@employee.Employee_ID</td>
+            <td>@employee.First_Name</td>
+            <td>@employee.Username</td>
+            <td>@employee.Role</td>
+        </tr>
+    }
+</table>
