--- a/Views/Shared/_AdminLayout.cshtml
+++ b/Views/Shared/_AdminLayout.cshtml
@@ -70,7 +70,7 @@
 
     </nav>
 
-    <div class="renderbody" id="renderbody"">
+    <div class="renderbody" id="renderbody">
         @RenderBody()
     </div>
 
