--- a/Views/AdminMonitoring/Dashboard.cshtml
+++ b/Views/AdminMonitoring/Dashboard.cshtml
@@ -23,7 +23,7 @@
             <img src="~/Image/Group1-Assets/TotalProductsIcon.png" />
         </div>
         <div class="total-information-container">
-            <h2>30</h2>
+            <h2>@ViewBag.TotalProducts</h2>
             <h4>Total Products</h4>
             <h5>Total product recorded in the inventory. </h5>
         </div>
