--- a/Views/AdminMonitoring/ProductRevenue.cshtml
+++ b/Views/AdminMonitoring/ProductRevenue.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<SBIT3J_SuperSystem_Final.Models.EmployeeExampleInfo>
+﻿@model List<SBIT3J_SuperSystem_Final.Models.ProductRevenueModel>
 @{
     ViewBag.Title = "ProductRevenue";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
@@ -7,18 +7,20 @@
 
 <table>
     <tr>
-        <th>Employee ID</th>
-        <th>First Name</th>
-        <th>Username</th>
-        <th>Role</th>
+        <th>Product Code</th>
+        <th>Product Name</th>
+        <th>Price</th>
+        <th>Quantity</th>
+        <th>Total Amoun</th>
     </tr>
-    @foreach (var employee in Model)
+    @foreach (var item in Model)
     {
         <tr>
-            <td>@employee.Employee_ID</td>
-            <td>@employee.First_Name</td>
-            <td>@employee.Username</td>
-            <td>@employee.Role</td>
+            <td>@item.Product_Code</td>
+            <td>@item.Product_Name</td>
+            <td>@item.Price</td>
+            <td>@item.Total_Quantity</td>
+            <td>@item.Total_Amount</td>
         </tr>
     }
 </table>
